<resources>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="title1" translatable="false">主页</string>
    <string name="title2" translatable="false">圈子</string>
    <string name="title3" translatable="false">随游</string>
    <string name="title4" translatable="false">会话</string>
    <string name="mainTitle1" translatable="false">旅图</string>
    <string name="mainTitle2" translatable="false">随游</string>
    <string name="mainTitle3" translatable="false">问答社区</string>
    <string name="mainTitle4" translatable="false">收件箱</string>
    <string name="SuiuuAccount" translatable="false">随友账户</string>
    <string name="OrdinaryAccount" translatable="false">普通账户</string>
    <string name="QuestionsAndAnswers" translatable="false">问答</string>
    <string name="NickName" translatable="false">昵称</string>
    <string name="Collection" translatable="false">收藏</string>
    <string name="blankNickName" translatable="false">暂无称呼</string>
    <string name="blankSignature" translatable="false">暂无个性签名</string>
    <string name="blankContent" translatable="false">暂无详细信息</string>
    <string name="Attention" translatable="false">关注</string>
    <string name="MyAttention" translatable="false">我的关注</string>
    <string name="thirdParty" translatable="false">绑定的第三方账号</string>
    <string name="Setting" translatable="false">设置</string>
    <string name="PersonalSetting" translatable="false">个人设置</string>
    <string name="NormalSetting" translatable="false">通用设置</string>
    <string name="clickHead" translatable="false">点击修改头像</string>
    <string name="personalInfo" translatable="false">个人信息</string>
    <string name="nickname_hint" translatable="false">昵称</string>
    <string name="Location_hint">The location</string>
    <string name="trade_hint" translatable="false">职业</string>
    <string name="Signature_hint">Signature hint</string>
    <string name="NewRemind" translatable="false">新提醒</string>
    <string name="NewAt" translatable="false">新@</string>
    <string name="NewComment" translatable="false">新评论</string>
    <string name="NewReply" translatable="false">新回复</string>
    <string name="NewAttention" translatable="false">新关注</string>
    <string name="TripGalleryMsg" translatable="false">旅图</string>
    <string name="QuestionAndAnswerMsg" translatable="false">问答</string>
    <string name="OrderMsg" translatable="false">订单</string>
    <string name="SystemMsg" translatable="false">通知</string>
    <string name="post" translatable="false">帖子</string>
    <string name="back" translatable="false">返回</string>
    <string name="Confirm" translatable="false">确认</string>
    <string name="AllPicture">All pictures</string>
    <string name="gender" translatable="false">性别</string>
    <string name="location" translatable="false">所在地</string>
    <string name="signature2" translatable="false">签名</string>
    <string name="feedback" translatable="false">反馈</string>
    <string name="send" translatable="false">发送</string>
    <string name="feedback_hint" translatable="false">请输入要反馈的内容</string>
    <string name="contactUs" translatable="false">联系我们</string>
    <string name="footprint0" translatable="false">足迹 0</string>
    <string name="attention_other" translatable="false">关注TA</string>
    <string name="TwentyThree" translatable="false">23</string>
    <string name="clickPraise" translatable="false">点赞</string>
    <string name="user" translatable="false">用户</string>
    <string name="complete">Complete</string>
    <string name="Singapore_n">aaaaaaaaaaaaaaaaaaa</string>
    <string name="Jeju_Island">Jeju Island</string>
    <string name="editor" translatable="false">修改</string>
    <string name="search_question" translatable="false">写下你的问题</string>
    <string name="question_description" translatable="false">问题的描述</string>
    <string name="show_location" translatable="false">显示你的位置</string>
    <string name="image_theme" translatable="false">想个标题吧</string>
    <string name="activity_description" translatable="false">活动描述</string>
    <string name="picture_description" translatable="false">图片描述</string>
    <string name="choice_picture" translatable="false">请至少选择一张图片</string>
    <string name="sure_delete" translatable="false">确认删除</string>
    <string name="load_wait" translatable="false">正在加载，请稍候&#8230;</string>
    <string name="login_wait" translatable="false">正在登陆，请稍候&#8230;</string>
    <string name="register_wait" translatable="false">正在注册，请稍候&#8230;</string>
    <string name="choice_area" translatable="false">请选择地区</string>
    <string name="choice_theme" translatable="false">请选择主题</string>
    <string name="theme_or_area_is_empty" translatable="false">请选择主题或者地区</string>
    <string name="ask_description_is_empty" translatable="false">问题描述不能为空</string>
    <string name="activity_description_is_empty" translatable="false">活动描述不能为空</string>
    <string name="your_ask_is_empty" translatable="false">你的问题不能为空</string>
    <string name="title_is_empty" translatable="false">你的标题不能为空</string>
    <string name="article_publish_success" translatable="false">文章发布成功</string>
    <string name="article_publish_failure" translatable="false">文章发布失败</string>
    <string name="article_update_success" translatable="false">文章更新成功</string>
    <string name="UnknownArea" translatable="false">未知区域</string>
    <string name="title" translatable="false">标题</string>
    <string name="attentionDynamic" translatable="false">关注动态</string>
    <string name="more" translatable="false">更多</string>
    <string name="today_star" translatable="false">今日之星</string>
    <string name="loopDynamic" translatable="false">圈子动态</string>
    <string name="UnknownName" translatable="false">未知姓名</string>
    <string name="noInformation" translatable="false">暂无信息</string>
    <string name="popularRecommendation" translatable="false">热门推荐</string>
    <string name="please_input_email_or_phone_number" translatable="false">请输入邮箱或手机号</string>
    <string name="please_input_password" translatable="false">请输入密码</string>
    <string name="obtain_captcha" translatable="false">获取验证码</string>
    <string name="please_input_number" translatable="false">请输入手机号</string>
    <string name="please_input_confirm_password" translatable="false">请输入确认密码</string>
    <string name="please_input_obtain_captcha" translatable="false">请输入验证码</string>
    <string name="DataError" translatable="false">数据获取失败，请稍候再试！</string>
    <string name="NetworkAnomaly" translatable="false">网络异常，请检查后再试！</string>
    <string name="NoData" translatable="false">暂无更多数据！</string>
    <string name="SystemException" translatable="false">系统异常</string>
    <string name="DataException" translatable="false">数据异常,请检查后再试！</string>
    <string name="UnknownError" translatable="false">未知错误</string>
    <string name="DataReFai" ranslatable="false">数据请求失败，请稍候再试！</string>
    <string name="LoginInvalid" translatable="false">登录信息过期,请重新登录!</string>
    <string name="all_attention" translatable="false">关注动态</string>
    <string name="thisArticNoComment" translatable="false">该文章暂时没有评论</string>
    <string name="addAttentionSuccess" translatable="false">添加关注成功!</string>
    <string name="addAttentionFail" translatable="false">添加关注失败！</string>
    <string name="pull_to_refresh_pull_label">Drop down refresh</string>
    <string name="pull_to_refresh_release_label">Release rear refresh</string>
    <string name="pull_to_refresh_refreshing_label">refresh\u2026</string>
    <string name="pull_to_refresh_footer_release_label">Release rear loading</string>
    <string name="pull_to_refresh_footer_pull_label">Pull on more</string>
    <string name="pull_to_refresh_footer_refreshing_label">loading\u2026</string>
    <string name="loadDataComplete" translatable="false">Data load, click refresh</string>
    <string name="man" translatable="false">男</string>
    <string name="woman" translatable="false">女</string>
    <string name="sex" translatable="false">性别:</string>
    <string name="country" translatable="false">国家</string>
    <string name="local" translatable="false">请选择所在地</string>
    <string name="countryDetails" translatable="false">请选择国家</string>
    <string name="Next" translatable="false">下一步</string>
    <string name="a" translatable="false">A</string>
    <string name="people_number" translatable="false">人数</string>
    <string name="type" translatable="false">类型</string>
    <string name="price" translatable="false">价格</string>
    <string name="refreshData" translatable="false">点击重新加载数据</string>
    <string name="please_enter_search_content" translatable="false">请输入搜索内容</string>
    <string name="TripGallery" translatable="false">TripGallery</string>
    <string name="SuiuuPage" translatable="false">SuiuuPage</string>
    <string name="CommunityPage" translatable="false">CommunityPage</string>
    <string name="ChatPage" translatable="false">ChatPage</string>
    <string name="china">china</string>
    <string name="chinaCode">+86</string>
    <string name="internationalCodeFailure" translatable="false">国际电话区号获取失败，请点击Logo重试</string>
    <string name="WeiboAuthorizedStart">Weibo began to authorize&#8230;</string>
    <string name="WeiboAuthorizedComplete">Weibo authorization to complete</string>
    <string name="WeiboAuthorizedFailure">Weibo authorization to failure</string>
    <string name="WeiboAuthorizedError">Weibo authorization to error</string>
    <string name="WeiboAuthorizedCancel">Weibo authorization to cancel</string>
    <string name="WeChatAuthorizedStart">WeChat began to authorize&#8230;</string>
    <string name="WeChatAuthorizedComplete">WeChat authorization to complete</string>
    <string name="WeChatAuthorizedFailure">WeChat authorization to failure</string>
    <string name="WeChatAuthorizedError">WeChat authorization to error</string>
    <string name="WeChatAuthorizedCancel">WeChat authorization to cancel</string>
    <string name="QQAuthorizedStart">QQ began to authorize&#8230;</string>
    <string name="QQAuthorizedComplete">QQ authorization to complete</string>
    <string name="QQAuthorizedFailure">QQ authorization to failure</string>
    <string name="QQAuthorizedError">QQ authorization to error</string>
    <string name="QQAuthorizedCancel">QQ authorization to cancel</string>
    <string name="all_attention_dynamic_title">title</string>
    <string name="all_attention_dynamic_content">content</string>
    <string name="all_attention_dynamic_contentDescription" translatable="false">主要图片</string>
    <string name="noChatHistory" translatable="false">当前没有聊天信息</string>
    <string name="noData_AgainLoad" translatable="false">没有数据,请重新获取</string>
    <string name="zero" translatable="false">0</string>
    <string name="zeroForTenKilo" translatable="false">0 &#8211; 10000</string>
    <string name="Remove">Remove</string>
    <string name="RMB">￥</string>
    <string name="AccountBalance">Balance</string>
    <string name="ClickWithdrawals" translatable="false">点击提现</string>
    <string name="Date">Date</string>
    <string name="TransferAccount">Transfer Account</string>
    <string name="Money">Money</string>
    <string name="userName" translatable="false">用户名</string>
    <string name="app_name">Suiuu</string>
    <string name="in" translatable="false">在</string>
    <string name="itemLocationInfo" translatable="false">具体信息</string>
    <string name="Action" translatable="false">行为</string>
    <string name="PurchaseSuiuu" translatable="false">购买随游</string>
    <string name="Join" translatable="false">加入</string>
    <string name="ConsentJoin" translatable="false">同意加入</string>
    <string name="RefusalJoin" translatable="false">拒绝加入</string>
</resources>