<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_60dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_msg_system_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_15dp"
        android:layout_marginStart="@dimen/layout_15dp"
        android:text="@string/userName"
        android:textSize="@dimen/layout_18sp"/>

    <TextView
        android:id="@+id/item_msg_system_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Join"
        android:textSize="@dimen/layout_18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/item_msg_system_consent_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConsentJoin"
        android:textSize="@dimen/layout_18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/item_msg_system_refusal_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RefusalJoin"
        android:textSize="@dimen/layout_18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/item_msg_system_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remove"
        android:textSize="@dimen/layout_18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/item_msg_system_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/layout_18sp"/>

</LinearLayout>