<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_80dp">

    <com.minglang.suiuu.customview.CircleImageView
        android:id="@+id/item_msg_order_head_image_view"
        android:layout_width="@dimen/layout_50dp"
        android:layout_height="@dimen/layout_50dp"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/layout_10dp"
        android:src="@drawable/default_head_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/item_msg_order_head_image_view"
        android:layout_toRightOf="@+id/item_msg_order_head_image_view"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_msg_order_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/userName"
            android:textSize="@dimen/layout_18sp"/>

        <TextView
            android:id="@+id/item_msg_order_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textSize="@dimen/layout_18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_msg_order_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PurchaseSuiuu"
            android:textSize="@dimen/layout_18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_msg_order_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemLocationInfo"
            android:textSize="@dimen/layout_18sp"/>

    </LinearLayout>

</RelativeLayout>