<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/item_msg_question_head_image_view"
        android:layout_width="@dimen/layout_50dp"
        android:layout_height="@dimen/layout_50dp"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/layout_10dp"
        android:clickable="false"
        android:focusable="false"
        fresco:failureImage="@drawable/default_head_image_error"
        fresco:failureImageScaleType="fitXY"
        fresco:placeholderImage="@drawable/default_head_image"
        fresco:roundAsCircle="true" />

    <TextView
        android:id="@+id/item_msg_question_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/item_msg_question_head_image_view"
        android:layout_toRightOf="@+id/item_msg_question_head_image_view"
        android:text="@string/userName"
        android:textSize="@dimen/layout_18sp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/item_msg_question_user_name"
        android:layout_toRightOf="@+id/item_msg_question_user_name"
        android:text="@string/in"
        android:textSize="@dimen/layout_18sp" />

    <TextView
        android:id="@+id/item_msg_question_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView47"
        android:layout_toRightOf="@+id/textView47"
        android:text="@string/itemLocationInfo"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/layout_18sp" />

    <TextView
        android:id="@+id/item_msg_question_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/item_msg_question_info"
        android:layout_toRightOf="@+id/item_msg_question_info"
        android:text="@string/Action"
        android:textSize="@dimen/layout_18sp" />

</RelativeLayout>