<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/otherUserBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/user_background">

        <TextView
            android:id="@+id/otherUserCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="@dimen/layout_10dp"
            android:layout_marginStart="@dimen/layout_10dp"
            android:layout_toLeftOf="@+id/otherUserAttention"
            android:layout_toStartOf="@+id/otherUserAttention"
            android:drawableLeft="@drawable/icon_praise"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/icon_praise"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/otherUserAttention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/other_user_click3"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/other_user_click3"
            android:text="@string/attention_other"
            android:textColor="@drawable/other_user_click1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/otherUserConversation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/otherUserAttention"
            android:layout_toRightOf="@+id/otherUserAttention"
            android:drawableEnd="@drawable/other_user_click2"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/other_user_click2"
            android:gravity="end"
            android:text="@string/title4"
            android:textColor="@drawable/other_user_click1"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/otherUserAttention"
            android:layout_centerHorizontal="true">

            <com.minglang.suiuu.customview.CircleImageView
                android:id="@+id/otherUserHeadImage"
                android:layout_width="@dimen/layout_80dp"
                android:layout_height="@dimen/layout_80dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/default_head_image3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/otherUserHeadImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/otherUserName"
                    style="@style/otherUserInfo"
                    android:text="@string/blankNickName"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/otherUserLocation"
                    style="@style/otherUserInfo"
                    android:text="@string/location"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/otherUserSignature"
                    style="@style/otherUserInfo"
                    android:text="@string/blankSignature"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent">

        <ImageView
            android:id="@+id/OtherUserBack"
            style="@style/backKeyStyle"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back"/>

    </RelativeLayout>

    <com.minglang.pulltorefreshlibrary.PullToRefreshGridView
        android:id="@+id/otherUserLoop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/otherUserBackgroundLayout"
        android:layout_margin="@dimen/layout_5dp"
        android:choiceMode="none"
        android:horizontalSpacing="@dimen/layout_10dp"
        android:numColumns="2"
        android:scrollbars="none"
        android:verticalSpacing="@dimen/layout_10dp"/>

</RelativeLayout>